test/expected/declare_fuw3_v.out
declare f as function ( x as unsigned width 3 )
                                      ^
39: syntax error: "width": ',' expected
